# podigger

./: .codeclimate.yml  .cz.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .landscape.yml  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CONTEXT.md  Dockerfile  Dockerfile.django  GEMINI.md  LICENSE  Makefile  Procfile  README.dev.md  README.md  README.versioning.md  celerybeat-schedule  docker-compose.base.yml  docker-compose.django.yml  docker-compose.local.yml  docker-compose.new.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  main.py  manage.py  package-lock.json  requirements-django.txt  requirements.txt  ruff.toml  run.py  runtime.txt  skills-lock.json  test_req.py  travis.yml
.github/: dependabot.yml
.github/scripts/: create-dependabot-labels.sh
.github/workflows/: README-cleanup.md  TESTING-cleanup.md  ci.yml  cleanup-images.yml  deploy-production.yml  deploy-staging.yml  frontend.yml  release.yml
.reversa/: active-requirements.json  config.toml  config.user.toml  hooks.yml  plan.md  setup.json  state.json
.reversa/_config/: files-manifest.json  manifest.yaml
.reversa/context/: modules.json  surface.json
.reversa/templates/: actions-template.md  principles-template.md  quality-template.md  requirements-template.md  roadmap-template.md
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.specs/codebase/: ARCHITECTURE.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
_reversa_forward/001-remover-topic-suggestions/: requirements.md
_reversa_sdd/: architecture.md  c4-components.md  c4-containers.md  c4-context.md  code-analysis.md  confidence-report.md  data-dictionary.md  dependencies.md  domain.md  erd-complete.md  gaps.md  inventory.md  permissions.md  questions.md  state-machines.md
_reversa_sdd/accounts/: contracts.md  design.md  requirements.md  tasks.md
_reversa_sdd/adrs/: 001-approval-gate.md  002-jwt-httponly-cookies.md  003-postgresql-fts-trigram.md  004-redis-soft-dependency.md  005-celery-pipeline.md  006-material-symbols-rounded.md  007-proxy-auto-refresh.md  008-approval-status-orthogonal.md  009-topic-suggestion-separate-model.md  010-custom-user-email.md  README.md
_reversa_sdd/config/: contracts.md  design.md  requirements.md  tasks.md
_reversa_sdd/flowcharts/: accounts.md  frontend-features.md  frontend-pages.md  frontend-ui.md  podcasts.md
_reversa_sdd/frontend-features/: contracts.md  design.md  legacy-mapping.md  requirements.md  tasks.md
_reversa_sdd/frontend-pages/: contracts.md  design.md  legacy-mapping.md  requirements.md  tasks.md
_reversa_sdd/frontend-ui/: contracts.md  design.md  legacy-mapping.md  requirements.md  tasks.md
_reversa_sdd/openapi/: podigger.yaml
_reversa_sdd/podcasts/: contracts.md  design.md  requirements.md  tasks.md
_reversa_sdd/traceability/: code-spec-matrix.md  spec-impact-matrix.md
_reversa_sdd/user-stories/: admin-approval.md  auth.md  podcast-discovery.md
app/: __init__.py
app/admin/: views.py
backend/: .dockerignore  .env.example  .env.production.example  .env.staging  .env.staging.example  Dockerfile  Dockerfile.production  README.dev  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements-base.txt  requirements-dev.txt  requirements.txt  test_output.txt  test_output_2.txt
backend/accounts/: admin.py  apps.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/tests/: factories.py  test_cookie_auth.py  test_property_13_cookie_auth.py  test_property_token_views.py  test_token_views.py
backend/config/: __init__.py  __version__.py  asgi.py  celery.py  settings.py  urls.py  urls_health_snippet.py
backend/podcasts/: apps.py  health.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/podcasts/fixtures/: initial_fake_seed.json
backend/podcasts/management/: __init__.py
backend/podcasts/management/commands/: __init__.py  clear_fake_seed.py  remove_fixture.py  seed_admin.py  seed_fake_podcasts.py  seed_podcasts.py
backend/podcasts/migrations/: 0001_add_search_index.py  0001_initial.py  0002_add_search_index.py  0002_enable_pg_trgm.py  0003_add_search_index.py  0003_enable_pg_trgm.py  0004_alter_popularterm_date_search.py  0005_add_composite_indexes.py  0005_delete_topicsuggestion.py  __init__.py
backend/podcasts/services/: feed_parser.py  podcast_service.py  refresh_service.py  updater.py
backend/podcasts/tests/: __init__.py  _perf_fixtures.py  factories.py  test_api.py  test_connection_reuse.py  test_models.py  test_optimization_guards.py  test_parser.py  test_permissions.py  test_podcast_crud.py  test_property_11_12_14_content_permissions.py  test_refresh_service.py  test_search_performance.py  test_search_pure_read.py  test_updater.py  test_views_features.py
config/: config.py.example  dev.cfg
core/: __init__.py  admin.py  apps.py  models.py  podcast_parser.py  signals.py  tasks.py  updater.py
docs/: DOCKER_DJANGO.md  NGINX_SETUP.md
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.production  README.md  angular.json  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
nginx-proxy/: docker-compose.yml  nginx.conf
parser/: parser.py  r.json  update_base.py
podigger/: .env.example  __init__.py  celery.py  settings.py  urls.py  views.py  wsgi.py
scripts/: setup-frontend.sh  setup-uv.sh
tests/: test_bug_condition.py  test_preservation.py
web/: forms.py  urls.py  views.py
(+395 files in other folders)
