[project]
name = "podigger-backend"
version = "0.1.0"
description = "Podigger Django Backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django==6.0.6",
    "djangorestframework>=3.17.1,<4.0",
    "psycopg2-binary==2.9.11",
    "django-cors-headers==4.9.0",
    "celery==5.6.3",
    "redis==8.0.0",
    "gunicorn>=26.0.0,<27.0",
    "uvicorn==0.49.0",
    "ruff>=0.8.0,<0.9.0",
    "django-environ>=0.14.0",
    "django-redis>=7.0.0",
    "Faker==19.9.0",
    "factory-boy>=3.3.3,<4.0",
    "django-filter>=25.2",
    "pytest>=7.0.0",
    "pytest-django>=4.11.0",
    "pytest-mock>=3.10.0",
    "feedparser>=6.0.12",
    "requests>=2.34.2",
    "djangorestframework-simplejwt>=5.5.1",
]



[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v --tb=short --strict-markers
    --cov=podcasts --cov=accounts
    --cov-report=term-missing --cov-report=xml
    --cov-fail-under=70
"""
testpaths = ["podcasts/tests", "accounts/tests"]

[tool.coverage.run]
source = ["podcasts", "accounts"]
omit = ["*/tests/*", "*/migrations/*", "*/management/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "config/__version__.py:__version__",
    "pyproject.toml:version"
]
update_changelog_on_bump = true
tag_format = "v$version"
changelog_file = "../CHANGELOG.md"
changelog_incremental = true
changelog_start_rev = "HEAD"

